# CODEX_TEST

./: README.md  pyproject.toml
data/cv/: cv_1.txt  cv_2.txt  cv_3.txt  cv_4.txt  cv_5.txt  cv_6.txt
data/jobs/: job_1.txt  job_2.txt  job_3.txt  job_4.txt  job_5.txt  job_6.txt
src/docflow_ai/: __init__.py  bootstrap.py  cli.py  extractors.py  matching.py  models.py  pipeline.py
tests/: test_bootstrap.py  test_cli.py  test_pipeline.py
